--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -8,6 +8,15 @@
     <name>gulimall-common</name>
     <description>公共服务模块</description>
 
+
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -53,6 +62,25 @@
             <version>2.5.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!--微服务-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>2.2.4.RELEASE</version>
+
+
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+
+
+
     </dependencies>
+
+
 
 </project>
