--- a/gulimall-member/src/main/resources/application.yml
+++ b/gulimall-member/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     url: jdbc:mysql://192.168.215.168:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.25.1:8848
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
@@ -12,3 +17,5 @@ mybatis-plus:
       id-type: auto
 server:
   port: 8000
+
+
