--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -22,6 +22,7 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.2.0</version>
+
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -61,20 +62,26 @@
             <artifactId>spring-boot-test</artifactId>
             <version>2.5.2</version>
             <scope>test</scope>
+
         </dependency>
 
-        <!--微服务-->
+        <!--微服务 注册中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>2.2.4.RELEASE</version>
-
-
+        </dependency>
+        <!-- 配置中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>2.2.4.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
             <version>2.2.3.RELEASE</version>
+
         </dependency>
 
 
